--- a/example.yaml
+++ b/example.yaml
@@ -8,8 +8,8 @@ dockerfiles:
       - "dpkg" # Possible values: dpkg, rpm, pacman, pip, conda
     git_packages:
       - name: "pkg1"
-        location: "path/to/git/package"
-  - name: "image2:version"
-    location: "path/to/docker/folder"
-    package_managers:
-      - "dpkg"
+        location: "path/to/git/repo"
+    misc_packages:
+      - name: "mpkg1"
+        url: "https://example.com/package1.zip"
+        type: "zip" # Possible values: zip, tgz
