--- a/test.yaml
+++ b/test.yaml
@@ -10,3 +10,7 @@ dockerfiles:
     git_packages:
       - name: "pkg1"
         location: "/pkg1"
+    misc_packages:
+      - name: "mpkg1"
+        url: "http://localhost/package1.zip"
+        type: "zip"
