Fixed Nickel config files. Added artifact hash log on Snakefile + modified some variables names. Switched from 'tgz' to 'tar' for archive type.

--- a/artifacts_yaml/ppopp23/high_performance_and_scalable_agent_based_simulation_with_BioDynaMo.yaml
+++ b/artifacts_yaml/ppopp23/high_performance_and_scalable_agent_based_simulation_with_BioDynaMo.yaml
@@ -1,5 +1,5 @@
 artifact_url: "https://zenodo.org/record/7544675/files/SF2-code.tar.gz"
-type: "tgz"
+type: "tar"
 doi: "10.1145/3572848.3577480"
 image_name: "bdm-publication-image-v7"
 dockerfile_location: "bdm-paper-examples/docker"
