--- a/artifacts_yaml/ppopp23/tgopt_redundancy_aware-optimizations_for_temporal_graph_attention_network.yaml
+++ b/artifacts_yaml/ppopp23/tgopt_redundancy_aware-optimizations_for_temporal_graph_attention_network.yaml
@@ -1,5 +1,5 @@
 artifact_url: "https://zenodo.org/record/7328505/files/tgopt-artifact.tgz"
-type: "tgz"
+type: "tar"
 doi: "10.1145/3572848.3577490"
 image_name: "tgopt:artefact"
 dockerfile_location: "tgopt-artifact"
