--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -14,9 +14,10 @@ ARTIFACTS = get_artifacts_to_build(ARTIFACTS_FOLDER_NICKEL, BLACKLIST)
 rule all:
   input:
     expand("{folder}/{artifact}/{date}.csv",\
-           folder=["logs", "pkgs", "status"],\
+           folder=["logs", "pkgs", "build_status", "artifact_hash"],\
            artifact=ARTIFACTS,\
-           date=DATE),
+           date=DATE
+          ),
     f"{BLACKLIST_FOLDER}/{DATE}.csv"
 
 rule check_artifact:
@@ -39,16 +40,17 @@ rule run_ecg:
     ecg="ecg.py",
     artifact=f"{ARTIFACTS_FOLDER_JSON}/{{artifact}}.{EXTENSION}"
   output:
-    log    = "logs/{artifact}/{date}.csv",
+    log    = "logs/{artifact}/{date}.txt",
     pkg    = "pkgs/{artifact}/{date}.csv",
-    status = "status/{artifact}/{date}.csv",
+    build_status = "build_status/{artifact}/{date}.csv",
+    artifact_hash = "artifact_hash/{artifact}/{date}.csv"
   shell:
-    f"python3 {{input.ecg}} --log {{output.log}} --pkg {{output.pkg}} --status {{output.pkg}} {ARTIFACTS_FOLDER_JSON}/{{wildcards.artifact}}.{EXTENSION}"
+    f"python3 {{input.ecg}} -l {{output.log}} -p {{output.pkg}} -b {{output.build_status}} -a {{output.artifact_hash}} {ARTIFACTS_FOLDER_JSON}/{{wildcards.artifact}}.{EXTENSION}"
 
 rule update_blacklist:
   input:
     BLACKLIST,
-    status=expand("status/{artifact}/{{date}}.csv",\
+    build_status=expand("build_status/{artifact}/{{date}}.csv",\
                   artifact=ARTIFACTS)
   output:
     f"{BLACKLIST_FOLDER}/{{date}}.csv"
