Fixed Nickel contract and check files. Fixed input/output files in Snakefile.

--- a/artifacts_yaml/template.yaml
+++ b/artifacts_yaml/template.yaml
@@ -11,4 +11,4 @@ git_packages:
 misc_packages:
   - name: "mpkg1"
     url: "https://example.com/package1.zip"
-    type: "zip" # Possible values: zip, tgz
+    type: "zip" # Possible values: zip, tar
