--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,3 +2,11 @@ folder_artifacts_nickel: "artifacts/nickel"
 folder_artifacts_json: "artifacts/json"
 folder_blacklists: "blacklists"
 symlink_blacklist: "blacklist.csv"
+system: "g5k" # can be "local" for local execution
+
+site: "grenoble"
+cluster: "dahu"
+max_duration: 60 # 1 hour
+checkpoint: 1 # 1 minute
+besteffort: true
+sleep_time: 300 # 5 minutes
