--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,6 +2,7 @@ configfile: "config/config.yaml"
 
 include: "utils.smk"
 
+import os
 import datetime
 DATE = datetime.datetime.now().strftime("%Y%m%d")
 
@@ -11,17 +12,18 @@ BLACKLIST_FOLDER = config["folder_blacklists"]
 BLACKLIST = config["symlink_blacklist"]
 EXTENSION = "json"
 SYSTEM = config["system"]
+PREFIX = config["prefix"]
 
 ARTIFACTS = get_artifacts_to_build(ARTIFACTS_FOLDER_NICKEL, BLACKLIST)
 
 rule all:
   input:
-    expand("{folder}/{artifact}/{date}.csv",\
+    expand(f"{PREFIX}/{{folder}}/{{artifact}}/{{date}}.csv",\
            folder=["pkgs", "build_status", "artifact_hash"],\
            artifact=ARTIFACTS,\
            date=DATE
           ),
-    expand("{folder}/{artifact}/{date}.txt",\
+    expand(f"{PREFIX}/{{folder}}/{{artifact}}/{{date}}.txt",\
         folder=["logs"],\
         artifact=ARTIFACTS,\
         date=DATE
@@ -48,7 +50,7 @@ rule check_artifact:
 
 SHELLS_ECG = {
   "local": f"python3 {{input.ecg}} -l {{output.log}} -p {{output.pkg}} -b {{output.build_status}} -a {{output.artifact_hash}} {ARTIFACTS_FOLDER_JSON}/{{wildcards.artifact}}.{EXTENSION}",
-  "g5k": f"python3 {{input.execo_wrapper}} --site {config['site']} --cluster {config['cluster']} --max_duration {config['max_duration']} --checkpoint {config['checkpoint']} {'--besteffort' if config['besteffort'] else ''} --sleep_time {config['sleep_time']} -- "
+  "g5k": f"python3 {{input.execo_wrapper}} --path {os.getcwd()} --script {{input.oar_wrapper}} --site {config['site']} --cluster {config['cluster']} --max-duration {config['max_duration']} --checkpoint {config['checkpoint']} {'--besteffort' if config['besteffort'] else ''} --sleep_time {config['sleep_time']} -- '"
 }
 
 rule run_ecg:
@@ -60,19 +62,19 @@ rule run_ecg:
     oar_wrapper="workflow/scripts/ecg_wrapper.oar.bash",
     artifact=f"{ARTIFACTS_FOLDER_JSON}/{{artifact}}.{EXTENSION}"
   output:
-    log    = "logs/{artifact}/{date}.txt",
-    pkg    = "pkgs/{artifact}/{date}.csv",
-    build_status = "build_status/{artifact}/{date}.csv",
-    artifact_hash = "artifact_hash/{artifact}/{date}.csv"
+    log           = f"{PREFIX}/logs/{{artifact}}/{{date}}.txt",
+    pkg           = f"{PREFIX}/pkgs/{{artifact}}/{{date}}.csv",
+    build_status  = f"{PREFIX}/build_status/{{artifact}}/{{date}}.csv",
+    artifact_hash = f"{PREFIX}/artifact_hash/{{artifact}}/{{date}}.csv"
   shell:
-    (SHELLS_ECG["g5k"] if SYSTEM == "g5k" else "") + SHELLS_ECG["local"]
+    (SHELLS_ECG["g5k"] if SYSTEM == "g5k" else "") + SHELLS_ECG["local"] + ("'" if SYSTEM == "g5k" else "")
 
 rule update_blacklist:
   input:
     BLACKLIST,
-    build_status=expand("build_status/{artifact}/{{date}}.csv",\
+    build_status=expand(f"{PREFIX}/build_status/{{artifact}}/{{{{date}}}}.csv",\
                   artifact=ARTIFACTS)
   output:
     f"{BLACKLIST_FOLDER}/{{date}}.csv"
   shell:
-    f"cat {{input}} > {{output}} && ln -s {{output}} {BLACKLIST}"
+    f"cat {{input}} > {{output}} && rm -rf {BLACKLIST} && ln -s {{output}} {BLACKLIST}"
