--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -13,6 +13,7 @@ BLACKLIST = config["symlink_blacklist"]
 EXTENSION = "json"
 SYSTEM = config["system"]
 PREFIX = config["prefix"]
+ANALYSIS_DIR = config["analysis_dir"]
 
 ARTIFACTS = get_artifacts_to_build(ARTIFACTS_FOLDER_NICKEL, BLACKLIST)
 
@@ -22,12 +23,12 @@ rule all:
            folder=["pkgs", "build_status", "artifact_hash"],\
            artifact=ARTIFACTS,\
            date=DATE
-          ),
+    ),
     expand(f"{PREFIX}/{{folder}}/{{artifact}}/{{date}}.txt",\
         folder=["logs"],\
         artifact=ARTIFACTS,\
         date=DATE
-      ),
+    ),
     f"{BLACKLIST_FOLDER}/{DATE}.csv"
 
 rule check_all:
@@ -49,7 +50,7 @@ rule check_artifact:
     """
 
 SHELLS_ECG = {
-  "local": f"python3 {{input.ecg}} -l {{output.log}} -p {{output.pkg}} -b {{output.build_status}} -a {{output.artifact_hash}} {ARTIFACTS_FOLDER_JSON}/{{wildcards.artifact}}.{EXTENSION}",
+  "local": f"./{{input.ecg_wrapper}} {{input.ecg}} {ARTIFACTS_FOLDER_JSON}/{{wildcards.artifact}}.{EXTENSION} {{output.pkg}} {{output.build_status}} {{output.artifact_hash}} {{output.log}}",
   "g5k": f"python3 {{input.execo_wrapper}} --path {os.getcwd()} --script {{input.oar_wrapper}} --site {config['site']} --cluster {config['cluster']} --max-duration {config['max_duration']} --checkpoint {config['checkpoint']} {'--besteffort' if config['besteffort'] else ''} --sleep_time {config['sleep_time']} --build_status_file {{output.build_status}} --artifact {{wildcards.artifact}} -- '"
 }
 
@@ -58,8 +59,9 @@ rule run_ecg:
     "flake.nix",
     "flake.lock",
     ecg="ecg.py",
+    ecg_wrapper="workflow/scripts/ecg_wrapper.sh",
     execo_wrapper="workflow/scripts/submission_g5k.py",
-    oar_wrapper="workflow/scripts/ecg_wrapper.oar.bash",
+    oar_wrapper="workflow/scripts/ecg_oar_wrapper.oar.bash",
     artifact=f"{ARTIFACTS_FOLDER_JSON}/{{artifact}}.{EXTENSION}"
   output:
     log           = f"{PREFIX}/logs/{{artifact}}/{{date}}.txt",
@@ -73,9 +75,29 @@ rule update_blacklist:
   input:
     BLACKLIST,
     build_status=expand(f"{PREFIX}/build_status/{{artifact}}/{{{{date}}}}.csv",\
-                  artifact=ARTIFACTS)
+                        artifact=ARTIFACTS
+    )
   output:
     f"{BLACKLIST_FOLDER}/{{date}}.csv"
   shell:
     # We need to ignore lines where build is successful:
     f"cat {{input}} | grep -v ',success' > {{output}} && rm -rf {BLACKLIST} && ln -s {{output}} {BLACKLIST}"
+
+rule analysis:
+  input:
+    log           = f"{PREFIX}/logs/*/*.txt",
+    pkg           = f"{PREFIX}/pkgs/*/*.csv",
+    build_status  = f"{PREFIX}/build_status/*/*.csv",
+    artifact_hash = f"{PREFIX}/artifact_hash/*/*.csv",
+    softenv_analysis = "softenv_analysis.py",
+    buildstatis_analysis = "buildstatis_analysis.py",
+    artifact_analysis = "artifact_analysis.py",
+    SOFTENV_TYPES = ["sources-stats", "pkgs-changes"]
+  output:
+    expand(f"{ANALYSIS_DIR}/{{folder}}/{{artifact}}/{{date}}.csv",\
+           folder=["sources_stats", "pkgs_changes", "build_status", "artifact"],\
+           artifact=ARTIFACTS,\
+           date=DATE
+    ),
+  shell:
+    expand("python3 {{input.softenv_analysis}} -t {{analysis_type}}")
