--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -1,7 +1,7 @@
 folder_artifacts_nickel: "artifacts/nickel"
 folder_artifacts_json: "artifacts/json"
 folder_blacklists: "blacklists"
-system: "g5k" # can be "local" for local execution
+system: "g5k" # can be "g5k" to run on the Grid'5000 testbed, or "local" for local execution
 prefix: "outputs"
 analysis_dir: "outputs/analysis"
 
